2002-09-09 TADA Tadahi <sho@spc.gr.jp>
	* README: document improved.

2002-09-08 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: use description and benner in system preferences.

2002-09-06 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: fix bad condition to output link element into
	HTML header.
	* plugin/whatsnew-list.rb: fix error when no banner setting.

2002-09-06 vette <vette at mail.ne.jp>
	* plugin/whatsnew-list.rb: fix about relative path of image and typo.

2002-09-05 TADA Tadahi <sho@spc.gr.jp>
	* tdiary/blogwiki_style.rb: support new Wiki style in tDiary 2.1.2.20050905.
	* plugin/blog-style.rb: overwrite subtitle_link to delete section anchor.
	* plugin/whatsnew-list.rb: title set to 'RSS' in link element of RSS
	AutoDiscovery.

2002-08-29 TADA Tadahi <sho@spc.gr.jp>
	* plugin/title-link.rb: disable link in day mode.
	* README*: add about title-link.rb plugin.

2002-08-26 TADA Tadahi <sho@spc.gr.jp>
	* plugin/blog-category.rb: support Plugin#title_proc, new feature after
	  tDiary 2.1.2.20050826.
	* add new plugin: title-link.rb: make permalink include all of title.
	* blogwiki_style.rb: remove about category.

2002-08-25 TADA Tadahi <sho@spc.gr.jp>
	* plugin/blog-category.rb: specify genre of preference.

2005-07-29 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-category.rb: fix broken title after changing comment status.

2005-07-20 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.2.

2005-07-13 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: add list of bots.

2005-06-30 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: show archive serial in <title> when month mode.

2005-06-22 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog_category.rb: define Diary#stripped_title in comment mode.

2005-06-09 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.1.

2005-06-04 TADA Tadashi <sho@spc.gr.jp>
	* plugin/archive.rb: support navi_user_month.

2005-06-03 TADA Tadashi <sho@spc.gr.jp>